# RAGify

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_basic.py
config/: config.yaml
examples/: agent_example.py  basic_rag_example.py  client_proposal.md  multimodal_rag_example.py  rag_agent_1.0_example.py
examples/sample_data/: langchain_features.txt  multimodal_rag.txt  rag_introduction.txt
examples/streamlit_demo/: README.md  app.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/scripts/: bridge.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chunks/: route.ts
frontend/src/app/api/documents/: route.ts
frontend/src/app/knowledge-base/: page.tsx
frontend/src/app/qa/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/lib/: api.ts  bridge.ts
frontend/src/types/: index.ts
ragify/: __init__.py
ragify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ragify/agentic/: __init__.py  agent.py  skills.py
ragify/agents/: __init__.py  base.py  rag_agent.py  tools.py
ragify/cli/: __init__.py  cli.py
ragify/config/: __init__.py  loader.py
ragify/core/: __init__.py  chains.py  document_loaders.py  document_processors.py  embeddings.py  kb_manager.py  language_models.py  vectorstores.py
ragify/mcp/: __init__.py  base.py  components.py  pipelines.py
ragify/mcp_server/: server.py
tests/: test_agent.py  test_config.py  test_core.py  test_pipeline.py  test_rag_agent.py  test_rag_agent_1.0.py
(+8 files in other folders)
